# heuristictree

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pipeline.yaml
data/tests/: test.txt
heuristictree/: README.md  cli.py  parser.py  quick_tree.py  tree.py
heuristictree/heuristictree/: tree.py
instances/: SDAT_c1  SDAT_c10  SDAT_c11  SDAT_c12  SDAT_c13  SDAT_c14  SDAT_c15  SDAT_c16  SDAT_c17  SDAT_c18  SDAT_c2  SDAT_c3  SDAT_c4  SDAT_c5  SDAT_c6  SDAT_c7  SDAT_c8  SDAT_c9
tests/: test_cli.py
